oci.yaml
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: redis
  name: redis
spec: 
  clusterIP: None
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector: 
    app: redis
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: redis
  labels:
    app: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: iad.ocir.io/hktwlab/vote-app/redis:alpine
        ports:
        - containerPort: 6379
          name: redis
      imagePullSecrets:
      - name: ocirsecret

---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app: db
  name: db
spec: 
  clusterIP: None
  ports: 
    - 
      name: db
      port: 5432
      targetPort: 5432
  selector: 
    app: db
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: db
  # labels:
  #   app: db
spec:
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - 
          name: db
          image: iad.ocir.io/hktwlab/vote-app/postgres:9.4
          ports:
            - containerPort: 5432
              name: db
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data
      imagePullSecrets:
      - name: ocirsecret
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: postgres-pv-claim

---
apiVersion: v1
kind: Service
metadata:
  name: result
  labels:
    app: result
spec:
  type: LoadBalancer
  ports:
    - 
      port: 80
      targetPort: 80
      name: result
  selector:
    app: result
  # clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: result
  labels:
    app: result
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: iad.ocir.io/hktwlab/vote-app/example-voting-app_result:latest
        ports:
        - containerPort: 80
          name: result
      imagePullSecrets:
      - name: ocirsecret

---
apiVersion: v1
kind: Service
metadata:
  name: vote
  labels:
    apps: vote
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
      name: vote
  selector:
    app: vote
  # clusterIP: None
---
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: vote
  labels:
    app: vote
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
        - name: vote
          image: iad.ocir.io/hktwlab/vote-app/example-voting-app_vote:latest
          ports:
            - 
              containerPort: 80
              name: vote
      imagePullSecrets:
      - name: ocirsecret
              
---
apiVersion: v1
kind: Service
metadata: 
  labels: 
    apps: worker
  name: worker
spec: 
  clusterIP: None
  selector: 
    app: worker
---
apiVersion: apps/v1beta1
kind: Deployment
metadata: 
  labels: 
    app: worker
  name: worker
spec: 
  replicas: 1
  template: 
    metadata: 
      labels: 
        app: worker
    spec: 
      containers: 
        - 
          image: iad.ocir.io/hktwlab/vote-app/example-voting-app_worker:latest
          name: worker
      imagePullSecrets:
      - name: ocirsecret
