smesh1-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vote-gateway
  namespace: smesh1
spec:
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
    # maistra.io/owner: smesh
