service-mesh-gw.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: vote-gateway
  namespace: smesh
spec:
  servers:
    - hosts:
        - "*"
      port:
        name: http
        number: 80
        protocol: HTTP
  selector:
    istio: ingressgateway
    # maistra.io/owner: smesh
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vote-vs
spec:
  hosts:
    - "*"
  gateways:
    - smesh/vote-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vote
            port:
              number: 8081
