npol.yml
kind: NetworkPolicy
# apiVersion: networking.k8s.io/v1
apiVersion: extensions/v1beta1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: bookstore
      role: api
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: bookstore
